gitops/argocd/apps/axion-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: axion-ingress
  namespace: axion
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "60"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "60"
spec:
  ingressClassName: nginx
  rules:
    - host: axion.santansre.shop
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: axion-ui
                port:
                  number: 80
